--- a/ruffle/blossom.html
+++ b/ruffle/blossom.html
@@ -2,146 +2,66 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Blossom Ruffle Doily -  Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1MjcLrpEiB2OoUSt9H9qmSB0bXAf9ZR9K&export=download"><img src="images/blossom.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Blossom Ruffle Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
-
-AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 4 balls White, Cream or Ecru 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Blossom Ruffle Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40, 4 balls White, Cream or Ecru 
 <br>Steel crochet hook No. 7 
 <br>Approximate size: 17 1/2 inches in diameter without ruffle 
-
 <br><b>1st Round:</b> Chain (ch) 5, join to form a ring, ch 1 and work 8 single crochet (sc) in ring, join in 1st sc. 
-
-<br><b>2nd Round:</b> Ch 3, double crochet (dc) in same space, * ch 3, 2 dc in next sc keeping last loop of each dc on 
-
-hook, thread over and work off all loops at one time, repeat from * 6 times, ch 3, join. 
-
+<br><b>2nd Round:</b> Ch 3, double crochet (dc) in same space, * ch 3, 2 dc in next sc keeping last loop of each dc on hook, thread over and work off all loops at one time, repeat from * 6 times, ch 3, join. 
 <br><b>3rd Round:</b> Slip stitch (sl st) into loop, ch 4, treble crochet (trc) in same space, ch 2, 2 trc in same space, * ch 2, 
-
 2 trc, ch 2, 2 trc in next loop, repeat from * all around, ch 2, join in 4th st of ch. 
-
-<br><b>4th Round:</b> Ch 4, trc in same space, * trc in next trc, ch 2, trc in next trc, 2 trc in next trc, ch 5, 2 trc in next trc, 
-
-repeat from * all around ending to corres-pond, ch 5, join. 
-
-<br><b>5th Round:</b> Ch 4, 1 trc in each of the next 3 trc, * 1 trc in each of the next 2 trc keeping last loop of each trc on 
-
-hook, thread over and work off all loops at one time (2 trc cluster), ch 5, 2 trc in center st of next loop, ch 5, 2 trc cluster over  
-
+<br><b>4th Round:</b> Ch 4, trc in same space, * trc in next trc, ch 2, trc in next trc, 2 trc in next trc, ch 5, 2 trc in next trc, repeat from * all around ending to corres-pond, ch 5, join. 
+<br><b>5th Round:</b> Ch 4, 1 trc in each of the next 3 trc, * 1 trc in each of the next 2 trc keeping last loop of each trc on hook, thread over and work off all loops at one time (2 trc cluster), ch 5, 2 trc in center st of next loop, ch 5, 2 trc cluster over  
 next 2 trc, 1 trc in each of the next 2 trc, repeat from * all around ending to correspond, ch 5, join in 1st trc. 
-
-<br><b>6th Round:</b> Ch 4, 1 trc in each of the next 3 sts keeping last loop of each trc on hook, thread over and work off 
-
-all loops at one time, * ch 5, skip 1 loop, 2 trc in next trc, ch 3, 3 trc in next trc, ch 3, trc in next loop, ch 3, 4 trc cluster over 
-
-next trc group, repeat from * all around ending to correspond, ch 3, join in 1st cluster. 
-
-<br><b>7th Round:</b> Sl st to next trc, ch 4, trc in next trc, * ch 3, 2 trc in next trc, 1 trc, ch 2, 1 trc in next trc, 2 trc in 
-
-next trc, ch 2, skip 1 loop, trc in next loop, ch 5, trc in next loop, ch 2, 1 trc in each of the next 2 trc, repeat from * all around 
-
-ending to correspond, ch 2, join in 4th st of ch. 
-
-<br><b>8th Round:</b> Ch 4, trc in next trc, * ch 2, 2 trc in next trc, 1 trc in each of the next 2 trc, 4 trc in next loop, 1 trc 
-
-in each of the next 2 trc, 2 trc in next trc, ch 4, skip 1 loop, trc in next loop, ch 4, skip next trc and next loop, 1 trc in each of 
-
-the next 2 trc, repeat from * all around ending to correspond, ch 4, join in 4th st of ch. 
-
-<br><b>9th Round:</b> Ch 4, trc in next trc, ch 3, * 2 trc in next trc, 1 trc in each of the next 5 trc, 2 trc in next trc, 1 trc in 
-
-each of the next 4 trc, 2 trc in next trc, ch 3, skip 1 loop, trc in next loop, ch 3, 1 trc in each of the next 2 trc, ch 3, repeat from 
-
-* all around ending to correspond, join. 
-
-<br><b>10th Round:</b> Ch 4, trc in same space, * ch 3, 3 trc in next trc, ch 4, 5 trc cluster over next 5 trc, ch 4, 1 trc in 
-
-each of the next 5 trc, ch 4, 5 trc cluster over next 5 trc, ch 4, trc in next loop, ch 4, skip 1 loop, 2 trc in next trc, repeat from * 
-
-all around ending to correspond, ch 4, join. 
-
+<br><b>6th Round:</b> Ch 4, 1 trc in each of the next 3 sts keeping last loop of each trc on hook, thread over and work off all loops at one time, * ch 5, skip 1 loop, 2 trc in next trc, ch 3, 3 trc in next trc, ch 3, trc in next loop, ch 3, 4 trc cluster over next trc group, repeat from * all around ending to correspond, ch 3, join in 1st cluster. 
+<br><b>7th Round:</b> Sl st to next trc, ch 4, trc in next trc, * ch 3, 2 trc in next trc, 1 trc, ch 2, 1 trc in next trc, 2 trc in next trc, ch 2, skip 1 loop, trc in next loop, ch 5, trc in next loop, ch 2, 1 trc in each of the next 2 trc, repeat from * all around ending to correspond, ch 2, join in 4th st of ch. 
+<br><b>8th Round:</b> Ch 4, trc in next trc, * ch 2, 2 trc in next trc, 1 trc in each of the next 2 trc, 4 trc in next loop, 1 trc in each of the next 2 trc, 2 trc in next trc, ch 4, skip 1 loop, trc in next loop, ch 4, skip next trc and next loop, 1 trc in each of the next 2 trc, repeat from * all around ending to correspond, ch 4, join in 4th st of ch. 
+<br><b>9th Round:</b> Ch 4, trc in next trc, ch 3, * 2 trc in next trc, 1 trc in each of the next 5 trc, 2 trc in next trc, 1 trc in each of the next 4 trc, 2 trc in next trc, ch 3, skip 1 loop, trc in next loop, ch 3, 1 trc in each of the next 2 trc, ch 3, repeat from * all around ending to correspond, join. 
+<br><b>10th Round:</b> Ch 4, trc in same space, * ch 3, 3 trc in next trc, ch 4, 5 trc cluster over next 5 trc, ch 4, 1 trc in each of the next 5 trc, ch 4, 5 trc cluster over next 5 trc, ch 4, trc in next loop, ch 4, skip 1 loop, 2 trc in next trc, repeat from * all around ending to correspond, ch 4, join. 
 <br><b>11th Round:</b> Ch 4, trc in next trc, * ch 3, 2 trc in next trc, 1 trc, ch 2, 1 trc in next trc, 2 trc in next trc, ch 5, skip 
-
 1 loop, trc in next loop, ch 5, 5 trc cluster over next 5 trc, ch 5, trc in next loop, ch 5, trc in next loop, ch 5, skip 1 loop, 1 trc in 
-
 each of the next 2 trc, repeat from * all around ending to correspond, ch 5, join. 
-
 <br><b>12th Round:</b> Ch 4, trc in next trc, ** ch 3, 2 trc in next trc, 1 trc in each of the next 2 trc, 4 trc in next loop, 1 trc 
-
 in each of the next 2 trc, 2 trc in next trc, ch 3, trc in next loop, * ch 5, trc in next loop, repeat from * twice, ch 5, skip 1 loop, 1 
-
 trc in each of the next 2 trc, repeat from ** all around ending to correspond, ch 5, join. 
-
 <br><b>13th Round:</b> Ch 4, trc in next trc, ** ch 3, 2 trc in next trc, 1 trc in each of the next 4 trc, 2 trc in next trc, 1 trc in each of the next 5 trc, 2 trc in next trc, ch 3, trc in next loop, * ch 5, trc in next loop, repeat from * twice, ch 5, skip 1 loop, 1 
-
 trc in each of the next 2 trc, repeat from ** all around ending to correspond, ch 5, join. 
-
 <br><b>14th Round:</b> Ch 4, trc in next trc, ** ch 5, 5 trc cluster over next 5 trc, ch 5, 1 trc in each of the next 5 trc, ch 5, 
-
 5 trc cluster over next 5 trc, ch 3, trc in next loop, * ch 5, trc in next loop, repeat from * twice, ch 5, skip 1 loop, 1 trc in each of 
-
 the next 2 trc, repeat from ** all around ending to correspond, ch 5, join. 
-
 <br><b>15th Round:</b> Ch 4, 2 trc in same space, ** ch 2, 3 trc in next trc, ch 3, trc in next loop, ch 5, trc in next loop, ch 
-
 5, 5 trc cluster over next 5 trc, * ch 5, trc in next loop, repeat from * 4 times, ch 5, skip 1 loop, 3 trc in next trc, repeat from ** 
-
 all around ending to correspond, ch 5, join. 
-
 <br><b>16th Round:</b> Ch 4, trc in same space, ** 1 trc in each of the next 2 trc, 4 trc in next loop, 1 trc in each of the 
-
 next 2 trc, 2 trc in next trc, ch 5, skip 1 loop, trc in next loop, * ch 5, trc in next loop, repeat from * 5 times, ch 5, skip 1 loop, 
-
 2 trc in next trc, repeat from ** all around ending to correspond, ch 5, join. 
-
 <br><b>17th Round:</b> Ch 4, trc in same space, ** 1 trc in each of the next 4 trc, 2 trc in next trc, 1 trc in each of the next 
-
 5 trc, 2 trc in next trc, ch 3, trc in next loop, * ch 5, trc in next loop, repeat from * 5 times, ch 5, skip 1 loop, 2 trc in next trc, 
-
 repeat from ** all around ending to correspond, ch 5, join. 
-
 <br><b>18th Round:</b> Ch 4, 4 trc cluster over next 4 trc, ** ch 5, 1 trc in each of the next 5 trc, ch 5, 5 trc cluster over 
-
 next 5 trc, ch 3, trc in next loop, * ch 5, trc in next loop, repeat from * 5 times, ch 5, skip 1 loop, 5 trc cluster over next 5 trc, 
-
 repeat from ** all around ending to correspond, ch 5, join. 
-
 <br><b>19th Round:</b> Sl st into loop, ch 9, ** 5 trc cluster over next 5 trc, * ch 5, trc in next loop, repeat from * 9 times, 
-
 ch 5, repeat from ** all around ending last repeat with ch 2, dc in 4th st of ch (this brings thread in position for next round) . 
-
 <br><b>20th Round:</b> Ch 10, trc in next loop, * ch 6, trc in next loop, repeat from * all around ending with ch 3, dc in 4th 
-
 st of ch. 
-
 <br><b>21st Round:</b> Ch 4, trc in same space, * ch 5, trc in next loop, repeat from * all around, ch 5, join. 
-
 <br><b>22nd Round:</b> Start ruffle: sl st to next loop, * ch 10, sc in same loop, ch 10, sc in same loop, ch 10, sc in same 
-
 loop, ch 10, sc in next loop, repeat from * all around ending with ch 5, double treble crochet ( [d trc] 3 times over hook) in 
-
 same space as beginning. 
-
 <br><b>23rd Round:</b> * Ch 10, sc in next loop, repeat from * all around ending with ch 5, d trc in d trc. <br>Repeat the 
-
 last round 9 times. 
-
 <br><b>Next Round:</b> ** Ch 5, 5 trc cluster st in next loop (5 trc cluster st; 5 trc in same space keeping last loop of each 
-
 trc on hook, thread over and work off all loops at one time) , ch 4, sl st in top of cluster st for picot, ch 3, 5 trc in same loop, ch 
-
 1, turn, 1 sc in each of the last 5 trc just made, ch 3, turn,. 1 trc in each of the next 3 sc keeping last loop of each trc on hook, 
-
 thread over and work off all loops at one time, ch 4, sl st in top of trc cluster just made for picot, ch 4, sl st in last sc, ch 3, 5 trc 
-
 cluster st in same loop, ch 4, sl st in top of cluster st just made for picot; ch 5, sc in next loop, * ch 9, sl st in 4th st from hook 
-
 for picot, ch 5, sc in next loop, repeat from * 8 times, repeat from ** all around, join, cut thread. 
-
 <br><br>
-<a href="doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
