--- a/ruffle/irishruff.html
+++ b/ruffle/irishruff.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Irish Rose Ruffled Doily -  Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=19QXCkINVmGCaJ87K1fp7zxEs-hB47Uzd&export=download"><img src="images/irishruff.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Irish Rose Ruffled Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
- AMERICAN THREAD COMPANY "STAR" MERCERIZED CROCHET COTTON, ARTICLE 30 Size 50 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Irish Rose Ruffled Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br> AMERICAN THREAD COMPANY "STAR" MERCERIZED CROCHET COTTON, ARTICLE 30 Size 50 
 <br>5-100 yd. Balls White. 
 <br>Steel Crochet Hook No. 13. 
 <br>Doily measures about 10 1/2 inches without ruffle. 
@@ -50,20 +41,8 @@ shell, ch 5, sc in same space, ch 7, * sc in next 5 ch loop, ch 7, sc in center 
 <br><b>2nd Row:</b> * Ch 10, sc in next loop, repeat from * all around ending row with ch 5, d trc in d trc. 
 <br><b>3rd -7th Rows:</b> Repeat last row. 
 <br><b>8th Row:</b> Ch 1, sc in same space, * ch 5, sl st in top of sc for picot, ch 8, 3 dc, picot, 5 dc, picot, 3 dc in next loop, ch 8, sc in next loop, repeat from * all around, break thread. 
-
-
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
