--- a/ruffle/pinr.html
+++ b/ruffle/pinr.html
@@ -2,172 +2,54 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pineapple Ruffle Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1q4zKvJ4Ma2ods_LtuVtGDSf0tduHixhR&export=download"><img src="images/pinr.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Pineapple Ruffle Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
-
- 
-AMERICAN THREAD COMPANY "STAR" MERCERIZED CROCHET COTTON, ARTICLE 20 Size 20
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pineapple Ruffle Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY "STAR" MERCERIZED CROCHET COTTON, ARTICLE 20 Size 20
 4-200 yd. Balls White, Ecru or Cream.
 <br>Steel Crochet Hook No. 12.
 <br>Doily measures about 13 inches in diameter without the ruffle.
 <br><b>1st Rnd:</b> Ch 6, join to form a ring, ch 1 and work 8 sc in ring, join in 1st sc.
-
 <br><b>2nd Rnd:</b> * Ch 10, sc in next sc, repeat from * 6 times, ch 4, d trc (3 times over needle) in next sc. This brings thread in position for next Rnd:</b>
-
 <br><b>3rd Rnd:</b> Ch 3, 2 dc in same space, * ch 7, 3 dc in next loop, repeat from * all around, ch 7, join.
-
-<br><b>4th Rnd:</b> Sl st to next dc, * ch 5, 3 dc in next loop, ch 5, sc in center dc of next dc group, repeat from * all around ending row with ch 5, 3 dc in next loop, ch 2, trc in 
-
-same space with sl st.
-
+<br><b>4th Rnd:</b> Sl st to next dc, * ch 5, 3 dc in next loop, ch 5, sc in center dc of next dc group, repeat from * all around ending row with ch 5, 3 dc in next loop, ch 2, trc in same space with sl st.
 <br><b>5th Rnd:</b> * Ch 7, sc in next loop, repeat from * all around ending row with ch 3, trc in trc.
-
 <br><b>6th Rnd:</b> Ch 5, dc in same space, * ch 5, 1 dc, ch 3, 1 dc in center st of next loop, repeat from * all around, ch 5, join in 3rd st of ch.
-
-<br><b>7th Rnd:</b> Sl st into loop, ch 3, dc in same space, ch 3, 2 dc in same space, * ch 3, skip 1 loop, 8 trc in next loop, ch 3, skip 1 loop, 2 dc, ch 3, 2 dc (shell) in next loop, 
-
-repeat from * all around ending row with ch 3, skip 1 loop, 8 trc in next loop, ch 3, join in 3rd st of ch.
-
-<br><b>8th Rnd:</b> Sl st into center of shell, ch 3, dc in same space, ch 3, 2 dc in same space, * ch 3, 1 trc in each trc with ch 1 between each trc, ch 3, 2 dc, ch 3, 2 dc (shell) in 
-
-center of next shell, repeat from * all around ending row with ch 3, 1 trc in each trc with ch 1 between each trc, ch 3, join in 3rd st of ch.
-
-<br><b>9th Rnd:</b> Sl st to center of shell, ch 3, 1 dc, ch 3, 2 dc in same space, ** ch 4, sc between 1st 2 trc of pineapple, * ch 4, sc between next 2 trc, repeat from * 5 times, ch 
-
-4, 2 dc, ch 3, 2 dc in center of next shell, repeat from ** all around in same manner, join.
-
-<br><b>10th Rnd:</b> Sl st to center of shell, ch 3, 1 dc, ch 3, 2 dc in same space, ** ch 4, skip 1 loop, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * 4 times, ch 
-
-4, shell in shell, repeat from ** all around in same manner, join.
-
-<br><b>11th Rnd:</b> Sl st to center of shell, ch 3, 1 dc, ch 3, 2 dc, ch 3, 2 dc in same space, ** ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * 3 times, ch 4, 
-
-2 dc, ch 3, 2 dc, ch 3, 2 dc in center of next shell, repeat from ** all around in same manner, join.
-
-<br><b>12th Rnd:</b> Sl st into loop, ch 3, 1 dc, ch 3, 2 dc in same space, ** ch 5, shell in next loop, ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * twice, ch 
-
-4, skip 1 loop, shell in next ch 3 loop, repeat from ** all around in same manner, join.
-
-<br><b>13th Rnd:</b> Sl st to center of shell, shell in same space, ** ch 3, shell in next loop, ch 3, shell in next shell, ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat 
-
-from * once, ch 4, shell in next shell, repeat from ** all around in same manner, join.
-
-<br><b>14th Rnd:</b> Sl st to center of shell, shell in same space, * ch 3, 1 dc, ch 3, 1 dc in next loop, ch 3, shell in next shell, ch 3, 1 dc, ch 3, 1 dc in next loop, ch 3, shell in next 
-
-shell, ch 4, s c in 1st loop of pineapple, ch 4, sc in next loop, ch 4, shell in next shell, repeat from * all around in same manner, join.
-
-<br><b>15th Rnd:</b> Sl st to center of shell, shell in same space, * ch 4, skip 1 loop, 8 trc in next loop, ch 4, shell in next shell, ch 4, skip 1 loop, 8 trc in next loop, ch 4, shell in 
-
-next shell, ch 4, sc in remaining loop of pineapple, ch 4, shell in next shell, repeat from * all around in same manner, join.
-
-<br><b>16th Rnd:</b> Sl st to center of shell, shell in same space, * ch 4, 1 trc in each of the next 8 trc with ch 1 between each trc, ch 4, shell in next shell, ch 4, 1 trc in each of the 
-
-next 8 trc with ch 1 between each trc, ch 4, shell in next shell, shell in next shell, repeat from * all around in same manner ending row to correspond, join in 3rd st of ch of 1st shell, ch 
-
-1, turn.
-
-<br><b>17th Rnd:</b> Sl st back to center of shell just made, ch 3, turn, dc in same space, ch 2, 2 dc in center of next shell, ** ch 4, sc between 1st 2 trc, * ch 4, sc between next 2 
-
-trc, repeat from * 5 times, ch 4, shell in next shell, ch 4, sc between 1st 2 trc, * ch 4, sc between next 2 trc, repeat from * 5 times, ch 4, 2 dc in center of next shell, ch 2, 2 dc in 
-
-center of next shell, repeat from **all around in same manner, join.
-
-<br><b>18th Rnd:</b> Sl st into ch 2 loop, shell in same space, ** ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * 4 times, ch 4, shell in next shell, ch 4, sc in 1st loop 
-
-of next pineapple, * ch 4, sc in next loop, repeat from * 4 times, ch 4, shell in next ch 2 loop, repeat from ** all around in same manner, join.
-
-<br><b>19th Rnd:</b> Sl st to center of shell, ch 3, 1 dc, ch 3, 2 dc, ch 3, 2 dc in same space, ** ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * 3 times, ch 4, 2 dc, ch 
-
-3, 2 dc, ch 3, 2 dc in center of next shell, repeat from ** all around in same manner, join.
-
-<br><b>20th Rnd:</b> Sl st to loop, shell in same space, ** ch 5, shell in next ch 3 loop, ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * twice, ch 4, shell in next ch 3 
-
-loop, repeat from ** all around in same manner, join.
-
-<br><b>21st Rnd:</b> Sl st to center of shell, shell in same space, ** ch 4, sc in next loop, ch 4, shell in center of next shell, ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat 
-
-from *, ch 4, shell in next shell, repeat from ** all around in same manner, join.
-
-<br><b>22nd Rnd:</b> Sl st to center of shell, shell in same space, * ch 5, sc in next sc, ch 5, shell in next shell, ch 4, sc in 1st loop of pineapple, ch 4, sc in next loop, ch 4, shell in next shell, 
-
-repeat from * all around in same manner, join.
-
-<br><b>23rd Rnd:</b> Sl st to center of shell, shell in same space, ** ch 7, * thread over needle twice, insert in next loop, thread over and work off 2 loops twice, repeat from *, thread over 
-
-and work off all loops at one time, ch 7, shell in next shell, ch 4, sc in remaining loop of pineapple, ch 4, shell in next shell, repeat from ** all around in same manner, join.
-
-<br><b>24th Rnd:</b> Sl st to center of shell, shell in same space, * ch 7, sc in next loop, ch 9, sc in next loop, ch 7, shell in next shell, ch 4, sc in next sc at top of pineapple, ch 4, shell in 
-
-next shell, repeat from * all around in same manner, join.
-
-<br><b>25th Rnd:</b> Sl st to center of shell, shell in same space, * ch 7, sc in next loop, ch 7, sc in next loop, ch 7, sc in next loop, ch 7, shell in next shell, ch 1, shell in next shell, repeat 
-
-from * all around in same manner, join.
-
-<br><b>26th Rnd:</b> Sl st to center of shell, ch 3, dc in same space, ** ch 7, sc in next loop, * ch 7, sc in next loop, repeat from * twice, ch 7, 2 dc in center of next shell, 2 dc in center of 
-
-next shell, repeat from ** all around ending row with 2 dc in last shell, join.
-
-<br><b>27th Rnd:</b> * * Ch 7, sc in next loop, * ch 7, sc in next loop, repeat from * 3 times, ch 7, sc in center of 4 dc group, repeat from ** all around ending row with ch 3, trc in center of 
-
-4 dc group.
-
+<br><b>7th Rnd:</b> Sl st into loop, ch 3, dc in same space, ch 3, 2 dc in same space, * ch 3, skip 1 loop, 8 trc in next loop, ch 3, skip 1 loop, 2 dc, ch 3, 2 dc (shell) in next loop, repeat from * all around ending row with ch 3, skip 1 loop, 8 trc in next loop, ch 3, join in 3rd st of ch.
+<br><b>8th Rnd:</b> Sl st into center of shell, ch 3, dc in same space, ch 3, 2 dc in same space, * ch 3, 1 trc in each trc with ch 1 between each trc, ch 3, 2 dc, ch 3, 2 dc (shell) in center of next shell, repeat from * all around ending row with ch 3, 1 trc in each trc with ch 1 between each trc, ch 3, join in 3rd st of ch.
+<br><b>9th Rnd:</b> Sl st to center of shell, ch 3, 1 dc, ch 3, 2 dc in same space, ** ch 4, sc between 1st 2 trc of pineapple, * ch 4, sc between next 2 trc, repeat from * 5 times, ch 4, 2 dc, ch 3, 2 dc in center of next shell, repeat from ** all around in same manner, join.
+<br><b>10th Rnd:</b> Sl st to center of shell, ch 3, 1 dc, ch 3, 2 dc in same space, ** ch 4, skip 1 loop, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * 4 times, ch 4, shell in shell, repeat from ** all around in same manner, join.
+<br><b>11th Rnd:</b> Sl st to center of shell, ch 3, 1 dc, ch 3, 2 dc, ch 3, 2 dc in same space, ** ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * 3 times, ch 4, 2 dc, ch 3, 2 dc, ch 3, 2 dc in center of next shell, repeat from ** all around in same manner, join.
+<br><b>12th Rnd:</b> Sl st into loop, ch 3, 1 dc, ch 3, 2 dc in same space, ** ch 5, shell in next loop, ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * twice, ch 4, skip 1 loop, shell in next ch 3 loop, repeat from ** all around in same manner, join.
+<br><b>13th Rnd:</b> Sl st to center of shell, shell in same space, ** ch 3, shell in next loop, ch 3, shell in next shell, ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * once, ch 4, shell in next shell, repeat from ** all around in same manner, join.
+<br><b>14th Rnd:</b> Sl st to center of shell, shell in same space, * ch 3, 1 dc, ch 3, 1 dc in next loop, ch 3, shell in next shell, ch 3, 1 dc, ch 3, 1 dc in next loop, ch 3, shell in next shell, ch 4, s c in 1st loop of pineapple, ch 4, sc in next loop, ch 4, shell in next shell, repeat from * all around in same manner, join.
+<br><b>15th Rnd:</b> Sl st to center of shell, shell in same space, * ch 4, skip 1 loop, 8 trc in next loop, ch 4, shell in next shell, ch 4, skip 1 loop, 8 trc in next loop, ch 4, shell in next shell, ch 4, sc in remaining loop of pineapple, ch 4, shell in next shell, repeat from * all around in same manner, join.
+<br><b>16th Rnd:</b> Sl st to center of shell, shell in same space, * ch 4, 1 trc in each of the next 8 trc with ch 1 between each trc, ch 4, shell in next shell, ch 4, 1 trc in each of the next 8 trc with ch 1 between each trc, ch 4, shell in next shell, shell in next shell, repeat from * all around in same manner ending row to correspond, join in 3rd st of ch of 1st shell, ch 1, turn.
+<br><b>17th Rnd:</b> Sl st back to center of shell just made, ch 3, turn, dc in same space, ch 2, 2 dc in center of next shell, ** ch 4, sc between 1st 2 trc, * ch 4, sc between next 2 trc, repeat from * 5 times, ch 4, shell in next shell, ch 4, sc between 1st 2 trc, * ch 4, sc between next 2 trc, repeat from * 5 times, ch 4, 2 dc in center of next shell, ch 2, 2 dc in center of next shell, repeat from **all around in same manner, join.
+<br><b>18th Rnd:</b> Sl st into ch 2 loop, shell in same space, ** ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * 4 times, ch 4, shell in next shell, ch 4, sc in 1st loop of next pineapple, * ch 4, sc in next loop, repeat from * 4 times, ch 4, shell in next ch 2 loop, repeat from ** all around in same manner, join.
+<br><b>19th Rnd:</b> Sl st to center of shell, ch 3, 1 dc, ch 3, 2 dc, ch 3, 2 dc in same space, ** ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * 3 times, ch 4, 2 dc, ch 3, 2 dc, ch 3, 2 dc in center of next shell, repeat from ** all around in same manner, join.
+<br><b>20th Rnd:</b> Sl st to loop, shell in same space, ** ch 5, shell in next ch 3 loop, ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from * twice, ch 4, shell in next ch 3 loop, repeat from ** all around in same manner, join.
+<br><b>21st Rnd:</b> Sl st to center of shell, shell in same space, ** ch 4, sc in next loop, ch 4, shell in center of next shell, ch 4, sc in 1st loop of pineapple, * ch 4, sc in next loop, repeat from *, ch 4, shell in next shell, repeat from ** all around in same manner, join.
+<br><b>22nd Rnd:</b> Sl st to center of shell, shell in same space, * ch 5, sc in next sc, ch 5, shell in next shell, ch 4, sc in 1st loop of pineapple, ch 4, sc in next loop, ch 4, shell in next shell, repeat from * all around in same manner, join.
+<br><b>23rd Rnd:</b> Sl st to center of shell, shell in same space, ** ch 7, * thread over needle twice, insert in next loop, thread over and work off 2 loops twice, repeat from *, thread over and work off all loops at one time, ch 7, shell in next shell, ch 4, sc in remaining loop of pineapple, ch 4, shell in next shell, repeat from ** all around in same manner, join.
+<br><b>24th Rnd:</b> Sl st to center of shell, shell in same space, * ch 7, sc in next loop, ch 9, sc in next loop, ch 7, shell in next shell, ch 4, sc in next sc at top of pineapple, ch 4, shell in next shell, repeat from * all around in same manner, join.
+<br><b>25th Rnd:</b> Sl st to center of shell, shell in same space, * ch 7, sc in next loop, ch 7, sc in next loop, ch 7, sc in next loop, ch 7, shell in next shell, ch 1, shell in next shell, repeat from * all around in same manner, join.
+<br><b>26th Rnd:</b> Sl st to center of shell, ch 3, dc in same space, ** ch 7, sc in next loop, * ch 7, sc in next loop, repeat from * twice, ch 7, 2 dc in center of next shell, 2 dc in center of next shell, repeat from ** all around ending row with 2 dc in last shell, join.
+<br><b>27th Rnd:</b> * * Ch 7, sc in next loop, * ch 7, sc in next loop, repeat from * 3 times, ch 7, sc in center of 4 dc group, repeat from ** all around ending row with ch 3, trc in center of 4 dc group.
 <br><b>28th Rnd:</b> * Ch 8, sc in next loop, repeat from * all around ending row with ch 3, trc in trc.
-
 <br><b>29th Rnd:</b> Ch 3, 2 dc in same space, * ch 5, 3 dc in next loop, repeat from * all around, join.
-
 <br><b>30th Rnd:</b> Sl st to center of loop, * ch 8, sc in next loop, repeat from * all around ending row with ch 3, trc in sl st.
-
 <br><b>31st Rnd:</b> Ch 3, 2 dc in same space, * ch 6, 3 dc in next loop, repeat from * all around ending row with ch 3, trc in 3rd st of ch.
 <br><b>32nd Rnd:</b> * Ch 9, sc in next loop, repeat from * all around ending row with ch 3, d trc in trc.
-
 <br><b>33rd Rnd:</b> Same as 31st row but ending row with ch 1, tr trc (4 times over needle) in 3rd st of ch.
-
-<br><b>RUFFLE.</b> * Ch 10, sc in same loop, ch 10, sc in same loop, ch 10, sc in same loop, ch 10, sc in next loop, repeat from * all around ending row with ch 5, tr trc in same space as beginning 
-
-(384 loops).
-
-<br><b>2nd Rnd:</b> * Ch 10, sc in next loop, repeat from * all around ending row same as last 
-rnd. Repeat the 2nd row twice but ending the last row with ch 3, thread over needle 5 times, thread over and work off all loops 2 at a time.
-
-<br><b>5th Rnd:</b> Ch 4, 7 trc in same loop, * ch 6, 4 sc in next loop, 4 sc in next loop, ch 6, 8 trc in next loop, repeat from * all around ending row with ch 6, 4 sc in each of the next 2 
-
-loops, ch 6, join in 4th st of ch.
-
-<br><b>6th Rnd:</b> Ch 5, 1 trc in each of the next 7 trc with ch 1 between each trc, * ch 8, skip 2 sc, 1 sc in each of the next 4 sc, ch 8, 1 trc in each of the next 8 trc with ch 1 between 
-
-each trc, repeat from * all around ending row with ch 8, skip 2 sc, 1 sc in each of the next 4 sc, ch 8, join in 4th st of ch.
-
-<br><b>7th Rnd:</b> Sl st between 1st 2 trc, ** ch 7, sl st in 4th st from hook for picot, ch 3, sc between next 2 trc, * ch 7, sl st in 4th st from hook for picot, ch 3, sc between next 2 trc, 
-
-repeat from * 4 times, ch 6, sc in next loop, ch 9, sl st in 5th st from hook for picot, ch 4, sl st in same space for picot, ch 4, sl st in same space for picot (a 3 picot cluster) ch 4, sc in 
-
-next loop, ch 6, sc between first 2 trc of next trc group, repeat from ** all around, break thread.
-
+<br><b>RUFFLE.</b> * Ch 10, sc in same loop, ch 10, sc in same loop, ch 10, sc in same loop, ch 10, sc in next loop, repeat from * all around ending row with ch 5, tr trc in same space as beginning (384 loops).
+<br><b>2nd Rnd:</b> * Ch 10, sc in next loop, repeat from * all around ending row same as last rnd. Repeat the 2nd row twice but ending the last row with ch 3, thread over needle 5 times, thread over and work off all loops 2 at a time.
+<br><b>5th Rnd:</b> Ch 4, 7 trc in same loop, * ch 6, 4 sc in next loop, 4 sc in next loop, ch 6, 8 trc in next loop, repeat from * all around ending row with ch 6, 4 sc in each of the next 2 loops, ch 6, join in 4th st of ch.
+<br><b>6th Rnd:</b> Ch 5, 1 trc in each of the next 7 trc with ch 1 between each trc, * ch 8, skip 2 sc, 1 sc in each of the next 4 sc, ch 8, 1 trc in each of the next 8 trc with ch 1 between each trc, repeat from * all around ending row with ch 8, skip 2 sc, 1 sc in each of the next 4 sc, ch 8, join in 4th st of ch.
+<br><b>7th Rnd:</b> Sl st between 1st 2 trc, ** ch 7, sl st in 4th st from hook for picot, ch 3, sc between next 2 trc, * ch 7, sl st in 4th st from hook for picot, ch 3, sc between next 2 trc, repeat from * 4 times, ch 6, sc in next loop, ch 9, sl st in 5th st from hook for picot, ch 4, sl st in same space for picot, ch 4, sl st in same space for picot (a 3 picot cluster) ch 4, sc in next loop, ch 6, sc between first 2 trc of next trc group, repeat from ** all around, break thread.
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
