--- a/ruffle/tailored.html
+++ b/ruffle/tailored.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Tailored Ruffled Doily -  Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1DnDXmtj7Fxd1pKE5Duwd-SQ78uSnKO9h&export=download"><img src="images/tailored.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Tailored Ruffled Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
- AMERICAN THREAD COMPANY The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Tailored Ruffled Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br> AMERICAN THREAD COMPANY The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40
 3 balls Silver Spangle. 1 ball Green Spangle or colors of your choice.<br>
 Approximate size: 8 1/4 inches in diameter without ruffle.<br>
 Steel crochet hook No. 7
@@ -38,24 +29,13 @@ Steel crochet hook No. 7
 <br><b>19th Round:</b> Ch 4, dc in next dc, * ch 1, dc in next ch 1 space, ch 1, dc in next dc, repeat from * 4 times, ch 1, dc in next dc, ** ch 2, dc in next dc, ch 1, dc in next dc, * ch 1, dc in next ch 1 space, ch 1, dc in next dc, repeat from * 4 times, ch 1, dc in next dc, repeat from ** all around, ch 2, join in 3rd st of ch (13 dc in each section with ch 1 between each dc).
 <br><b>20th Round:</b> Ch 4, ** dc in next loop, * ch 1, dc in next loop, repeat from * 4 times, ch 1, dc in next dc, * ch 1, dc in next loop, repeat from * 5 times, ch 1, dc in next dc, ch 2, skip the ch 2 loop, dc in next dc, ch 1, repeat from ** all around in same manner ending to correspond, ch 2, join (15 dc in each dc section).
 <br><b>21st Round:</b> Ch 4, ** dc in next loop, * ch 1, dc in next loop, repeat from * 12 times, ch 1, dc in next dc, ch 2, skip the ch 2 loop, dc in next dc, ch 1, repeat from ** all around in same manner ending to correspond, ch 2, join (16 dc in each section), cut thread.
-<br><br><b>Edge:</b> Attach Green in next dc, sc in same space, * ch 3, sl st in 3rd st from hook for picot, sc in next loop, sc in next dc, repeat from * 30 times, sc in next loop, ch 1, drop loop from hook, insert hook in l4th picot made, pick up loop and pull loop through (this scallop lays in front of work), sc in next dc, * sc in next loop, sc in next dc, ch 3, sl st in 3rd st from hook for picot, repeat from * 14 times, sc in next loop, sc in next dc, ch 1, drop loop from hook, insert hook in l6th free picot of 2nd scallop, pick up loop and pull through having 1 picot between joinings (this scallop lays to back of work), ch 1, ** sc in next loop, sc in next dc, * picot, sc in next loop, sc in next dc, repeat from 
+<br><b>Edge:</b> Attach Green in next dc, sc in same space, * ch 3, sl st in 3rd st from hook for picot, sc in next loop, sc in next dc, repeat from * 30 times, sc in next loop, ch 1, drop loop from hook, insert hook in l4th picot made, pick up loop and pull loop through (this scallop lays in front of work), sc in next dc, * sc in next loop, sc in next dc, ch 3, sl st in 3rd st from hook for picot, repeat from * 14 times, sc in next loop, sc in next dc, ch 1, drop loop from hook, insert hook in l6th free picot of 2nd scallop, pick up loop and pull through having 1 picot between joinings (this scallop lays to back of work), ch 1, ** sc in next loop, sc in next dc, * picot, sc in next loop, sc in next dc, repeat from 
 * 14 times, ch 1, drop loop from hook, insert hook in l4th free picot of previous scallop, pick up loop and pull through leaving 1 picot free between joinings, ch 1 (this scallop lays to front of work), repeat from ** all around having 1 scallop to back of work and the next to front of work to the last scallop, on last scallop work 13 picots after the joining, sc in next loop, sc in next dc, then ch 1, join to l6th picot made at beginning of round, ch 1, sc in next loop, sc in next dc, picot, sc in next loop, ch 1, join to l4th free picot of scallop before last scallop, ch 1, join, cut thread.
-<br><br><b>DIRECTIONS FOR STARCHING</b><br>
+<br><b>DIRECTIONS FOR STARCHING</b><br>
 Starch: Dissolve 1/4 cup starch in 1/2 cup of cold water. Boil about 1 1/4 cups of water, remove from flame, then slowly stir the starch mixture into boiling water stirring constantly. Place back on flame until it thickens.
+<br>As soon as starch is cool enough to handle, dip doily and squeeze starch through it thoroughly. Wring out extra starch. The doily should be wet with starch but there should be none in the spaces. Pin center of doily in position according to size and leave until thoroughly dry. If steam iron is used iron ruffle after it is dry. If regular iron is used dampen ruffle slightly before pressing. Pin folds of ruffle in position and leave until thoroughly dry.
 <br><br>
-As soon as starch is cool enough to handle, dip doily and squeeze starch through it thoroughly. Wring out extra starch. The doily should be wet with starch but there should be none in the spaces. Pin center of doily in position according to size and leave until thoroughly dry. If steam iron is used iron ruffle after it is dry. If regular iron is used dampen ruffle slightly before pressing. Pin folds of ruffle in position and leave until thoroughly dry.
-<br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
