--- a/ruffle/doubleruffle.html
+++ b/ruffle/doubleruffle.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>The Double Ruffle Doily -  Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1EecHJSbtZqtuui_4QqYPV9KcqXMkb7NH&export=download"><img src="images/doubleruffle.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>The Double Ruffle Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
-AMERICAN THREAD COMPANY "GEM" MERCERIZED CROCHET COTTON, Article 35, size 30, 3 balls White, Dk. Cream or Ecru or "STAR" MERCERIZED CROCHET COTTON, Article 20, size 30, 4 balls White, Dk. Cream or Ecru 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">The Double Ruffle Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY "GEM" MERCERIZED CROCHET COTTON, Article 35, size 30, 3 balls White, Dk. Cream or Ecru or "STAR" MERCERIZED CROCHET COTTON, Article 20, size 30, 4 balls White, Dk. Cream or Ecru 
 <br>Steel crochet hook No. 12
 <br>Doily measures approximately 12 1/2 inches in diameter without ruffle.
 <br><b>1st Round:</b> Chain (ch) 10, join to form a ring, ch 4, double crochet (dc) in ring, * ch 1, dc in ring, repeat from * 11 times, ch 1, join in 3rd stitch (st) of ch (14 dc).
@@ -62,17 +53,7 @@ AMERICAN THREAD COMPANY "GEM" MERCERIZED CROCHET COTTON, Article 35, size 30, 3 
 <br>
 Work last 2 rounds same as last 2 rounds of outside ruffle.
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
