--- a/ruffle/starbr.html
+++ b/ruffle/starbr.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Starburst Ruffle Doily -  Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1sAuRcgVIqz4VQNfT24O0et35KX40pxfc&export=download"><img src="images/starbr.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Starburst Ruffle Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
- AMERICAN THREAD COMPANY The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 2 balls each Silver Spangle, Sunshine Spangle, Chartreuse Spangle and Green Spangle 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Starburst Ruffle Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br> AMERICAN THREAD COMPANY The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 2 balls each Silver Spangle, Sunshine Spangle, Chartreuse Spangle and Green Spangle 
 <br>Approximate size: 16 1/2 inches in diameter or The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 ball each White, Buttercup, Chartreuse and Forest Green 
 <br>Approximate size: 15 1/2 inches in diameter 
 <br>Steel crochet hook No. 7 
@@ -35,19 +26,8 @@
 <br><b>20th Round:</b> Ch 1 and work 17 sc over each loop, join. 
 <br><b>21st Round:</b> Ch 1 and working in back loop of sts, * 1 sc in each of the next 7 sc, 3 sc in next sc, 1 sc in each of the next 7 sc, skip 2 sc, repeat from * all around, join. 
 <br>Repeat the last round for remainder of doily working 4 more rounds Silver Spangle or White, 6 rounds Sunshine Spangle or Buttercup, 6 rounds Chartreuse, 6 rounds Green, join, cut thread. 
-
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
